Fix lockWordAlignment failure for jdk 16 and 17 - Use internal asm package for lockWordAlignment - Fix build and test failure
[skip ci]
Signed-off-by: Longyu Zhang <longyu.zhang@ibm.com>