@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
 <!--
-  Copyright (c) 2016, 2020 IBM Corp. and others
+  Copyright (c) 2016, 2021 IBM Corp. and others
 
   This program and the accompanying materials are made available under
   the terms of the Eclipse Public License 2.0 which accompanies this
@@ -33,7 +33,6 @@
 	<property name="PROJECT_ROOT" location="." />
 	<property name="src" location="./src"/>
 	<property name="build" location="./bin"/>
-	<property name="LIB" value="asm_all"/>
 	<import file="${TEST_ROOT}/TKG/scripts/getDependencies.xml"/>
 
 	<target name="init">
@@ -53,9 +52,6 @@
 			<then>
 				<javac srcdir="${src}" destdir="${build}" debug="true" fork="true" executable="${compiler.javac}" includeAntRuntime="false" encoding="ISO-8859-1">
 					<src path="${src}" />
-					<classpath>
-						<pathelement location="${LIB_DIR}/asm-all.jar" />
-					</classpath>
 				</javac>
 			</then>
 			<else>
@@ -63,20 +59,26 @@
 				<javac srcdir="${src}" destdir="${build}" debug="true" fork="true" executable="${compiler.javac}" includeAntRuntime="false" encoding="ISO-8859-1">
 					<src path="${src}" />
 					<compilerarg line='${addExports}' />
-					<classpath>
-						<pathelement location="${LIB_DIR}/asm-all.jar" />
-					</classpath>
 				</javac>
 			</else>
 		</if>
 	</target>
 
 	<target name="generateTestClass" depends="compile" description="Generate test class files ">
+		<if>
+			<equals arg1="${JDK_VERSION}" arg2="8"/>
+			<then>
+				<property name="addExports" value="" />
+			</then>
+			<else>
+				<property name="addExports" value="--add-exports java.base/com.ibm.oti.vm=ALL-UNNAMED --add-exports java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED" />
+			</else>
+		</if>			
 		<property name="build.javaexecutable" value="${TEST_JDK_HOME}/bin/java"/>
 		<java classname="IntLongObjectAlignmentTestGenerator" failonerror="true" fork="true" logError="true" jvm="${build.javaexecutable}">
+			<jvmarg line='${addExports}' />
 			<classpath>
 				<pathelement path="${build}"/>
-				<pathelement location="${LIB_DIR}/asm-all.jar" />
 			</classpath>
 		</java>
 	</target>
